--- a/index.html
+++ b/index.html
@@ -83,6 +83,82 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="lg:px-[200px] lg:py-[120px] max-sm:px-[20px] max-sm:py-[40px] bg-[#230E3D] flex flex-col justify-center items-center lg:gap-[70px] max-sm:gap-[16px] mx-auto">
+            <div>
+                <h1 class="font-[Inter] font-bold lg:text-[48px] max-sm:text-[32px] leading-[auto] tracking-[0%] text-[#FFFFFF] text-center">Why Choose TechWave</h1>
+            </div>
+            <div class="grid lg:grid-cols-3 lg:grid-rows-3 lg:w-[1200px] lg:h-[790px] lg:gap-[30px] mx-auto max-sm:grid-cols-1 max-sm:grid-rows-5 max-sm:gap-[20px]">
+                <div class="lg:row-span-2 lg:col-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px]">
+                    <div>
+                        <img src="./assets/headphone.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Premium Audio Quality</h1>
+                    </div>
+                    <div>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">
+                            Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                        </p>
+                    </div>
+                </div>
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px]">
+                    <div>
+                        <img src="./assets/device.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Mobile Friendly</h1>
+                    </div>
+                    <div>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">
+                            Listen on the go with seamless mobile experience and offline downloads.
+                        </p>
+                    </div>
+                </div>
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px]">
+                    <div>
+                        <img src="./assets/location.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Global Community</h1>
+                    </div>
+                    <div>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">
+                            Connect with tech enthusiasts from over 120 countries worldwide.
+                        </p>
+                    </div>
+                </div>
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px]">
+                    <div>
+                        <img src="./assets/zap-fast.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Exclusive Interviews</h1>
+                    </div>
+                    <div>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">
+                            Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.
+                        </p>
+                    </div>
+                </div>
+                <div class="lg:col-span-1 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px]">
+                    <div>
+                        <img src="./assets/resource.png" alt="">
+                    </div>
+                    <div>
+                        <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Rich Resources</h1>
+                    </div>
+                    <div>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">
+                            Access show notes, transcripts, and additional learning materials for every episode.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        
     </main>
     <footer>
 
