--- a/index.html
+++ b/index.html
@@ -158,7 +158,75 @@
             </div>
         </div>
 
-        
+        <div class="mx-auto lg:px-[200px] lg:py-[120px] bg-[#1A0B2E]">
+            <div>
+                <div>
+                    <h1>Featured Episodes</h1>
+                </div>
+                <div class="flex justify-center items-center gap-[40px]">
+                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
+                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                                <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
+                            </div>
+                        </div>
+                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                            <div>
+                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                            </div>
+                            <div>
+                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            </div>
+                            <div class="flex items-center gap-[5px]">
+                                <img src="./assets/clock.png" alt="">
+                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">42 min</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
+                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                                <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
+                            </div>
+                        </div>
+                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                            <div>
+                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                            </div>
+                            <div>
+                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            </div>
+                            <div class="flex items-center gap-[5px]">
+                                <img src="./assets/clock.png" alt="">
+                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">42 min</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
+                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                                <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
+                            </div>
+                        </div>
+                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                            <div>
+                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                            </div>
+                            <div>
+                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            </div>
+                            <div class="flex items-center gap-[5px]">
+                                <img src="./assets/clock.png" alt="">
+                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">42 min</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </div>
     </main>
     <footer>
 
