--- a/index.html
+++ b/index.html
@@ -158,21 +158,21 @@
             </div>
         </div>
 
-        <div class="mx-auto lg:px-[200px] lg:py-[120px] bg-[#1A0B2E]">
-            <div>
+        <div class="mx-auto lg:px-[200px] lg:py-[120px] max-sm:px-[20px] max-sm:py-[40px] flex flex-col justify-center items-center bg-[#1A0B2E] lg:gap-[120px] max-sm:gap-[60px]">
+            <div class="flex flex-col justify-center items-center lg:gap-[40px] max-sm:gap-[25px]">
                 <div>
-                    <h1>Featured Episodes</h1>
+                    <h1 class="font-[Inter] font-bold lg:text-[48px] max-sm:text-[32px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Featured Episodes</h1>
                 </div>
-                <div class="flex justify-center items-center gap-[40px]">
-                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
-                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
-                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                <div class="flex lg:justify-center lg:items-center lg:gap-[40px] max-sm:flex-col max-sm:justify-center max-sm:items-center max-sm:gap-[20px]">
+                    <a href="https://youtu.be/ObA4ne4TVsE?si=Fa8fcQWjP8U_hkWf" target="_blank">
+                        <div class="lg:w-[380px] lg:h-[215px] max-sm:w-[400px] max-sm:h-[225px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
                             </div>
                         </div>
-                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                        <div class="lg:px-[24px] lg:py-[24px] max-sm:px-[16px] max-sm:py-[16px] lg:w-[380px] max-sm:w-[400px] bg-[#250D44] flex flex-col justify-start items-start lg:gap-[16px] max-sm:gap-[10px] rounded-bl-3xl rounded-br-3xl">
                             <div>
-                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                                <h1 class="font-[Inter] font-bold lg:text-[24px] max-sm:text-[20px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
                             </div>
                             <div>
                                 <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
@@ -184,52 +184,120 @@
                         </div>
                     </a>
                     <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
-                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
-                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                        <div class="lg:w-[380px] lg:h-[215px] max-sm:w-[400px] max-sm:h-[225px] bg-[url('./assets/Rectangle11.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
                             </div>
                         </div>
-                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                        <div class="lg:px-[24px] lg:py-[24px] max-sm:px-[16px] max-sm:py-[16px] lg:w-[380px] max-sm:w-[400px] bg-[#250D44] flex flex-col justify-start items-start lg:gap-[16px] max-sm:gap-[10px] rounded-bl-3xl rounded-br-3xl">
                             <div>
-                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                                <h1 class="font-[Inter] font-bold lg:text-[24px] max-sm:text-[20px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Building Better Habits for Remote Work</h1>
                             </div>
                             <div>
-                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
                             </div>
                             <div class="flex items-center gap-[5px]">
                                 <img src="./assets/clock.png" alt="">
-                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">42 min</p>
+                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">35 min</p>
                             </div>
                         </div>
                     </a>
-                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank">
-                        <div class="lg:w-[380px] lg:h-[215px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
-                            <div class="lg:w-[60px] lg:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
+                    <a href="https://youtu.be/XmWkcePhf84?si=vDoDyV5liS-EyyqL" target="_blank">
+                        <div class="lg:w-[380px] lg:h-[215px] max-sm:w-[400px] max-sm:h-[225px] bg-[url('./assets/Rectangle12.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover">
+                            <div class="lg:w-[60px] lg:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
                             </div>
                         </div>
-                        <div class="lg:px-[24px] lg:py-[24px] lg:w-[380px] bg-[#250D44] flex flex-col justify-start items-start gap-[16px] rounded-bl-3xl rounded-br-3xl">
+                        <div class="lg:px-[24px] lg:py-[24px] max-sm:px-[16px] max-sm:py-[16px] lg:w-[380px] max-sm:w-[400px] bg-[#250D44] flex flex-col justify-start items-start lg:gap-[16px] max-sm:gap-[10px] rounded-bl-3xl rounded-br-3xl">
                             <div>
-                                <h1 class="font-[Inter] font-bold text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF]">The Future of AI in Everyday Life</h1>
+                                <h1 class="font-[Inter] font-bold lg:text-[24px] max-sm:text-[20px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Career Growth in Tech: A Roadmap</h1>
                             </div>
                             <div>
-                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
                             </div>
                             <div class="flex items-center gap-[5px]">
                                 <img src="./assets/clock.png" alt="">
-                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">42 min</p>
+                                <p class="font-[Inter] font-semibold text-[16px] leading-[24px] tracking-[0%] text-[#00FF88]">51 min</p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-            <div>
-
+            <div class="flex flex-col justify-center items-center lg:gap-[40px] max-sm:gap-[25px]">
+                <div>
+                    <h1 class="font-[Inter] font-bold lg:text-[48px] max-sm:text-[32px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Meet The Host</h1>
+                </div>
+                <div class="bg-[#533C72] flex lg:flex-row max-sm:flex-col justify-center items-center lg:w-[1200px] lg:h-[280px] max-sm:w-[400px] max-sm:h-[483px] lg:px-[40px] lg:py-[40px] max-sm:px-[24px] max-sm:py-[24px] lg:gap-[24px] max-sm:gap-[16px] lg:rounded-[40px] max-sm:rounded-[24px]">
+                    <div class="lg:w-[500px] lg:h-[200px] max-sm:w-[150px] max-sm:h-[150px]">
+                        <img src="./assets/host.png" alt="" class="w-full">
+                    </div>
+                    <div class="flex flex-col justify-center lg:items-start max-sm:items-center gap-[16px]">
+                        <h1 class="font-[Inter] font-bold lg:text-[32px] max-sm:text-[24px] leading-[auto] tracking-[0%] text-[#FFFFFF] max-sm:text-center">Alex Kumar</h1>
+                        <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[60%] max-sm:text-center">
+                            Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+                        </p>
+                        <div class="flex items-center gap-[10px]">
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                                <a href="https://www.linkedin.com/">
+                                    <img src="./assets/linkedin.png" alt="">
+                                </a>
+                            </div>
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                                <a href="https://x.com/">
+                                    <img src="./assets/x.png" alt="">
+                                </a>
+                            </div>
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                                <a href="https://www.instagram.com/">
+                                    <img src="./assets/instagram.png" alt="">
+                                </a>
+                            </div>
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                                <a href="https://www.youtube.com/">
+                                    <img src="./assets/youtube.png" alt="">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
-    <footer>
-
+    <footer class="w-full bg-[url('./assets/footer-bg.png')] bg-no-repeat bg-center bg-cover lg:px-[120px] lg:py-[120px] flex justify-center items-center">
+        <div class="flex flex-col justify-center items-center gap-[40px]">
+            <div class="lg:w-[410px] lg:h-[60px]">
+                <a href="#"><img src="./assets/TechWave.png" alt="" class="w-full"></a>
+            </div>
+            <div class="flex justify-center items-center gap-[80px]">
+                <div class="flex justify-center items-center gap-[10px]">
+                    <img src="./assets/spotify.png" alt="">
+                    <a href="https://open.spotify.com/">
+                        <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Spotify</p>
+                    </a>
+                </div>
+                <div class="flex justify-center items-center gap-[10px]">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <a href="https://podcasts.apple.com/us/new">
+                        <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Apple Podcasts</p>
+                    </a>
+                </div>
+                <div class="flex justify-center items-center gap-[10px]">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <a href="https://www.youtube.com/">
+                        <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">YouTube</p>
+                    </a>
+                </div>
+                <div class="flex justify-center items-center gap-[10px]">
+                    <img src="./assets/twitter.png" alt="">
+                    <a href="https://x.com/">
+                        <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Twitter</p>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FAFAFA] opacity-[60%]">&copy; 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
