--- a/index.html
+++ b/index.html
@@ -263,31 +263,33 @@
             </div>
         </div>
     </main>
-    <footer class="w-full bg-[url('./assets/footer-bg.png')] bg-no-repeat bg-center bg-cover lg:px-[120px] lg:py-[120px] flex justify-center items-center">
-        <div class="flex flex-col justify-center items-center gap-[40px]">
-            <div class="lg:w-[410px] lg:h-[60px]">
-                <a href="#"><img src="./assets/TechWave.png" alt="" class="w-full"></a>
+    <footer class="w-full bg-[url('./assets/footer-bg.png')] bg-no-repeat bg-center bg-cover lg:px-[120px] lg:py-[120px] max-sm:px-[20px] max-sm:py-[40px] flex justify-center items-center">
+        <div class="flex flex-col justify-center items-center lg:gap-[40px] max-sm:gap-[24px]">
+            <div class="lg:w-[410px] lg:h-[60px] max-sm:w-[220px] max-sm:h-[32px]">
+                <a href="#">
+                    <img src="./assets/TechWave.png" alt="" class="w-full">
+                </a>
             </div>
-            <div class="flex justify-center items-center gap-[80px]">
-                <div class="flex justify-center items-center gap-[10px]">
+            <div class="lg:flex lg:justify-center lg:items-center lg:gap-[80px] max-sm:grid max-sm:grid-cols-2 max-sm:gap-[20px] max-sm:justify-center max-sm:items-center">
+                <div class="flex lg:justify-center max-sm:justify-start items-center gap-[10px]">
                     <img src="./assets/spotify.png" alt="">
                     <a href="https://open.spotify.com/">
                         <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Spotify</p>
                     </a>
                 </div>
-                <div class="flex justify-center items-center gap-[10px]">
+                <div class="flex lg:justify-center max-sm:justify-start items-center gap-[10px]">
                     <img src="./assets/apple-podcast.png" alt="">
                     <a href="https://podcasts.apple.com/us/new">
                         <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Apple Podcasts</p>
                     </a>
                 </div>
-                <div class="flex justify-center items-center gap-[10px]">
+                <div class="flex lg:justify-center max-sm:justify-start items-center gap-[10px]">
                     <img src="./assets/youtube-podcast.png" alt="">
                     <a href="https://www.youtube.com/">
                         <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">YouTube</p>
                     </a>
                 </div>
-                <div class="flex justify-center items-center gap-[10px]">
+                <div class="flex lg:justify-center max-sm:justify-start items-center gap-[10px]">
                     <img src="./assets/twitter.png" alt="">
                     <a href="https://x.com/">
                         <p class="font-[Inter] font-medium text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] opacity-[60%]">Twitter</p>
