--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             </div>
             <div class="max-sm:hidden sm:hidden md:block lg:block">
                 <ul class="flex justify-between items-center gap-[40px]">
-                    <li class="list-none"><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">About</a></li>
-                    <li><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">Episodes</a></li>
-                    <li><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">Host</a></li>
+                    <li class="list-none hover:underline"><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">About</a></li>
+                    <li class="list-none hover:underline"><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">Episodes</a></li>
+                    <li class="list-none hover:underline"><a href="#" class="font-[Inter] font-medium text-[16px] leading-[120%] tracking-[0%] text-[#FFFFFF] opacity-[90%]">Host</a></li>
                 </ul>
             </div>
             <div class="max-sm:hidden sm:block md:block lg:block">
-                <button class="sm:px-[10px] sm:py-[10px] lg:px-[16px] lg:py-[12px] opacity-[100%] rounded-[10000px] font-[Inter] font-semibold sm:text-[12px] lg:text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] flex items-center gap-[4px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] cursor-pointer"><span>Subscribe</span><i class="fa-solid fa-arrow-right"></i></button>
+                <button class="sm:px-[10px] sm:py-[10px] lg:px-[16px] lg:py-[12px] opacity-[100%] rounded-[10000px] font-[Inter] font-semibold sm:text-[12px] lg:text-[16px] leading-[auto] tracking-[0%] text-[#FFFFFF] flex items-center gap-[4px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] cursor-pointer hover:bg-[linear-gradient(-126deg,#FB09B4,#F7E93F,#9100F8)]"><span>Subscribe</span><i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="lg:hidden sm:hidden md:hidden max-sm:block text-white text-[24px] cursor-pointer">
                 <i class="fa-solid fa-bars"></i>
@@ -34,11 +34,11 @@
     <main>
         <div class="max-sm:w-full max-sm:py-[40px] max-sm:px-[20px] sm:w-full sm:py-[40px] sm:px-[20px] md:w-full md:py-[40px] md:px-[20px] lg:w-full lg:px-[525px] lg:py-[100px] bg-[url('./assets/hero-bg.png')] bg-no-repeat bg-cover bg-center lg:gap-[20px] sm:gap-[10px] md:gap-[20px] max-sm:gap-[10px] flex flex-col justify-center items-center">
             <div class="lg:w-[400px] lg:h-[400px] max-sm:w-[230px] max-sm:h-[230px] sm:w-[250px] sm:h-[250px] md:w-[320px] md:h-[320px] flex justify-center items-center relative">
-                <div class="flex items-center justify-center lg:static absolute inset-0">
+                <div class="flex items-center justify-center lg:static absolute inset-0 hover:transform hover:rotate-[3600deg] transition-all duration-[5000ms] linear">
                     <img src="./assets/hero-circle.png" alt="" class="w-full h-full object-contain ">
                 </div>
-                <img src="./assets/microphone.png" alt="microphone" class="lg:w-[117px] lg:h-[175px] sm:w-[70px] sm:h-[100px] md:w-[100px] md:h-[150px] max-sm:w-[60px] max-sm:h-[80px] absolute lg:top-[112px] lg:left-[142px] sm:top-[80px] sm:left-[90px] md:top-[95px] md:left-[110px] max-sm:top-[80px] max-sm:left-[85px]">
-                <div class="px-[16px] py-[8px] bg-[#00FF88] rounded-[10000px] font-[Inter] font-semibold text-[18px] leading-[auto] tracking-[0%] font-[#1A0B2E] absolute lg:top-[30px] lg:right-[60px] sm:top-[20px] sm:right-[10px] md:top-[20px] md:right-[20px] max-sm:top-[20px] max-sm:right-[10px] shadow-[0px_0px_8px_0px_#00FF88]">NEW</div>
+                <img src="./assets/microphone.png" alt="microphone" class="lg:w-[117px] lg:h-[175px] sm:w-[70px] sm:h-[100px] md:w-[100px] md:h-[150px] max-sm:w-[60px] max-sm:h-[80px] absolute lg:top-[112px] lg:left-[142px] sm:top-[80px] sm:left-[90px] md:top-[95px] md:left-[110px] max-sm:top-[80px] max-sm:left-[85px] hover:transform hover:scale-[1.1] transition-all duration-1000 ease-in-out">
+                <div class="px-[16px] py-[8px] bg-[#00FF88] rounded-[10000px] font-[Inter] font-semibold text-[18px] leading-[auto] tracking-[0%] font-[#1A0B2E] absolute lg:top-[30px] lg:right-[60px] sm:top-[20px] sm:right-[10px] md:top-[20px] md:right-[20px] max-sm:top-[20px] max-sm:right-[10px] shadow-[0px_0px_8px_0px_#00FF88] hover:transform hover:rotate-[360deg] transition-all duration-1000 ease-in-out">NEW</div>
             </div>
             <div>
                 <h1 class="font-[Inter] font-extrabold lg:text-[60px] sm:text-[50px] md:text-[60px] max-sm:text-[40px] leading-[auto] tracking-[0%] text-[#FFFFFF]">TechWave</h1>
@@ -47,8 +47,8 @@
                 <p class="font-[Inter] font-normal text-[16px] leading-[24px] tracking-[0%] text-[#FFFFFF] opacity-[80%] text-center">Your daily dose of tech insights, productivity hacks, and personal growth</p>
             </div>
             <div class="flex justify-center items-center gap-[20px] mt-[20px]">
-                <button class="px-[16px] py-[10px] md:px-[16px] md:py-[10px] md:text-[14px] lg:px-[20px] lg:py-[12px] lg:text-[16px] rounded-[10000px] font-[Inter] font-semibold text-[12px] leading-[auto] tracking-[0%] text-[#FFFFFF] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] cursor-pointer flex items-center gap-[4px] lg:w-[200px]"><i class="fa-brands fa-spotify"></i><span>Listen On Spotify</span></button>
-                <button class="px-[16px] py-[10px] md:px-[16px] md:py-[10px] md:text-[14px] lg:px-[20px] lg:py-[12px] lg:text-[16px] rounded-[10000px] font-[Inter] font-semibold text-[12px] leading-[auto] tracking-[0%] text-[#00FF88] border border-[#00FF88] cursor-pointer flex items-center gap-[4px]"><i class="fa-regular fa-envelope"></i><span>Subscribe</span></button>
+                <button class="px-[16px] py-[10px] md:px-[16px] md:py-[10px] md:text-[14px] lg:px-[20px] lg:py-[12px] lg:text-[16px] rounded-[10000px] font-[Inter] font-semibold text-[12px] leading-[auto] tracking-[0%] text-[#FFFFFF] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] cursor-pointer flex items-center gap-[4px] lg:w-[200px] hover:text-[#1A0B2E] transition-all duration-300 ease-in-out"><i class="fa-brands fa-spotify"></i><span>Listen On Spotify</span></button>
+                <button class="px-[16px] py-[10px] md:px-[16px] md:py-[10px] md:text-[14px] lg:px-[20px] lg:py-[12px] lg:text-[16px] rounded-[10000px] font-[Inter] font-semibold text-[12px] leading-[auto] tracking-[0%] text-[#00FF88] border border-[#00FF88] cursor-pointer flex items-center gap-[4px] hover:bg-[#00FF88] hover:text-[#1A0B2E] transition-all duration-300 ease-in-out"><i class="fa-regular fa-envelope"></i><span>Subscribe</span></button>
             </div>
         </div>
 
@@ -93,7 +93,7 @@
                 <h1 class="font-[Inter] font-bold lg:text-[48px] sm:text-[32px] md:text-[48px] max-sm:text-[32px] leading-[auto] tracking-[0%] text-[#FFFFFF] text-center">Why Choose TechWave</h1>
             </div>
             <div class="grid lg:grid-cols-3 lg:grid-rows-3 lg:w-full lg:h-auto lg:gap-[30px] max-sm:grid-cols-1 max-sm:grid-rows-5 max-sm:gap-[20px] sm:grid-cols-1 sm:grid-rows-5 sm:gap-[20px] md:grid-cols-2 md:grid-rows-3 md:gap-[30px] mx-auto">
-                <div class="lg:row-span-2 lg:col-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px]">
+                <div class="lg:row-span-2 lg:col-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px] hover:shadow-[0px_0px_30px_0px_#00FF88] transition-all duration-500">
                     <div>
                         <img src="./assets/headphone.png" alt="">
                     </div>
@@ -106,7 +106,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px]">
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px] hover:shadow-[0px_0px_30px_0px_#00FF88] transition-all duration-500">
                     <div>
                         <img src="./assets/device.png" alt="">
                     </div>
@@ -119,7 +119,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px]">
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px] hover:shadow-[0px_0px_30px_0px_#00FF88] transition-all duration-500">
                     <div>
                         <img src="./assets/location.png" alt="">
                     </div>
@@ -132,7 +132,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px]">
+                <div class="lg:col-span-2 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px] hover:shadow-[0px_0px_30px_0px_#00FF88] transition-all duration-500">
                     <div>
                         <img src="./assets/zap-fast.png" alt="">
                     </div>
@@ -145,7 +145,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="lg:col-span-1 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px]">
+                <div class="lg:col-span-1 lg:row-span-1 lg:px-[40px] lg:py-[40px] bg-[#351165] rounded-[40px] flex flex-col justify-center items-start lg:gap-[15px] max-sm:px-[24px] max-sm:py-[24px] max-sm:gap-[10px] sm:px-[24px] sm:py-[24px] sm:gap-[10px] md:px-[40px] md:py-[40px] md:gap-[15px] hover:shadow-[0px_0px_30px_0px_#00FF88] transition-all duration-500">
                     <div>
                         <img src="./assets/resource.png" alt="">
                     </div>
@@ -167,7 +167,7 @@
                     <h1 class="font-[Inter] font-bold lg:text-[48px] md:text-[40px] sm:text-[32px] max-sm:text-[32px] leading-[auto] tracking-[0%] text-[#FFFFFF]">Featured Episodes</h1>
                 </div>
                 <div class="grid lg:grid-cols-3 md:grid-cols-2 sm:grid-cols-1 max-sm:grid-cols-1 lg:gap-[40px] md:gap-[30px] sm:gap-[20px] max-sm:gap-[20px] w-full max-w-[1400px] mx-auto">
-                    <a href="https://youtu.be/ObA4ne4TVsE?si=Fa8fcQWjP8U_hkWf" target="_blank" class="w-full flex flex-col h-full">
+                    <a href="https://youtu.be/ObA4ne4TVsE?si=Fa8fcQWjP8U_hkWf" target="_blank" class="w-full flex flex-col h-full hover:shadow-[0px_0px_30px_0px_#00FF88] hover:transform hover:scale-[1.05] transition-all duration-500">
                         <div class="w-full h-[214px] bg-[url('./assets/Rectangle1.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover rounded-tl-3xl rounded-tr-3xl">
                             <div class="lg:w-[60px] lg:h-[60px] md:w-[60px] md:h-[60px] sm:w-[60px] sm:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank" class="w-full flex flex-col h-full">
+                    <a href="https://youtu.be/QOKLW5ITEiI?si=ocEl-XeYEUfhjPLB" target="_blank" class="w-full flex flex-col h-full hover:shadow-[0px_0px_30px_0px_#00FF88] hover:transform hover:scale-[1.05] transition-all duration-500">
                         <div class="w-full h-[214px] bg-[url('./assets/Rectangle11.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover rounded-tl-3xl rounded-tr-3xl">
                             <div class="lg:w-[60px] lg:h-[60px] md:w-[60px] md:h-[60px] sm:w-[60px] sm:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://youtu.be/XmWkcePhf84?si=vDoDyV5liS-EyyqL" target="_blank" class="w-full flex flex-col h-full">
+                    <a href="https://youtu.be/XmWkcePhf84?si=vDoDyV5liS-EyyqL" target="_blank" class="w-full flex flex-col h-full hover:shadow-[0px_0px_30px_0px_#00FF88] hover:transform hover:scale-[1.05] transition-all duration-500">
                         <div class="w-full h-[214px] bg-[url('./assets/Rectangle12.png')] flex justify-center items-center bg-no-repeat bg-center bg-cover rounded-tl-3xl rounded-tr-3xl">
                             <div class="lg:w-[60px] lg:h-[60px] md:w-[60px] md:h-[60px] sm:w-[60px] sm:h-[60px] max-sm:w-[60px] max-sm:h-[60px] bg-[linear-gradient(-126deg,#9100F8,#FB09B4,#F7E93F)] rounded-full flex justify-center items-center">
                                 <i class="fa-solid fa-play text-[#FFFFFF] text-[30px]"></i>
@@ -240,22 +240,22 @@
                             Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
                         </p>
                         <div class="flex items-center gap-[10px]">
-                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center hover:bg-blue-200 transition-all duration-300 ease-in-out">
                                 <a href="https://www.linkedin.com/">
                                     <img src="./assets/linkedin.png" alt="">
                                 </a>
                             </div>
-                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center hover:bg-blue-200 transition-all duration-300 ease-in-out">
                                 <a href="https://x.com/">
                                     <img src="./assets/x.png" alt="">
                                 </a>
                             </div>
-                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center hover:bg-blue-200 transition-all duration-300 ease-in-out">
                                 <a href="https://www.instagram.com/">
                                     <img src="./assets/instagram.png" alt="">
                                 </a>
                             </div>
-                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center">
+                            <div class="w-[40px] h-[40px] border-2 border-[#FFFFFF]/30 rounded-full px-[10px] py-[10px] flex justify-center items-center hover:bg-blue-200 transition-all duration-300 ease-in-out">
                                 <a href="https://www.youtube.com/">
                                     <img src="./assets/youtube.png" alt="">
                                 </a>
